Fix z-index layer order

--- a/app/styles/dialog.scss
+++ b/app/styles/dialog.scss
@@ -7,7 +7,7 @@
     overflow-y: auto;
     position: fixed;
     top: 0;
-    z-index: 99;
+    z-index: 500;
     padding: .75rem;
     transition: left .3s ease-in-out;
 
